@@ -13,14 +13,14 @@ PlanetPenguin Racer Translators
 Alexander Aksenov
 Eric Alvarez Llimos
 Helder Correia
+Jan Karwowski
 Karl Ove Hufthammer
 Marco Antonio Blanco
 Massimo Spazian
 Mikel Olasagasti
-Spiral
+Pascal GARCIA
 Theo Snelleman
 Trygve B. Wiig
-
 
 Additional Contributors
 -------------------------------------------
