@@ -13,6 +13,7 @@ pp_translate_language "en_GB" "English"
 pp_translate_language "es_ES" "Español"
 pp_translate_language "fr_FR" "Français"
 pp_translate_language "it_IT" "Italian"
+pp_translate_language "pl_PL" "Język polski"
 pp_translate_language "nl_NL" "Nederlands"
 pp_translate_language "nb_NO" "Norsk (bokmål)"
 pp_translate_language "nn_NO" "Norsk (nynorsk)"
