@@ -1,0 +1,124 @@
+
+##Polish translation
+# author jasio539_AT_op.pl
+
+#common strings
+pp_translate_string "Back" "Wstecz"
+pp_translate_string "PRESS ANY KEY TO START" "Naciśnij dowolny klawisz, by rozpocząć"
+
+#game_type_select
+pp_translate_string "Enter an event" "Wystartuj w zawodach"
+pp_translate_string "Practice" "Trening"
+pp_translate_string "Configuration" "Ustawienia"
+pp_translate_string "Credits" "Autorzy"
+pp_translate_string "Quit" "Zakończ"
+
+#configuration
+pp_translate_string "Graphics" "Wygląd"
+pp_translate_string "Video" "Grafika"
+pp_translate_string "Audio" "Dźwięk"
+pp_translate_string "Keyboard" "Klawisze"
+#pp_translate_string "Joystick" ""
+
+#config mode
+pp_translate_string "Cancel" "Anuluj"
+#pp_translate_string "Ok" ""
+
+#graphics configuration
+pp_translate_string "Graphics Configuration" "Ustawienia wyglądu"
+pp_translate_string "Language:" "Język:"
+pp_translate_string "Show UI Snow:" "Pokaż śnieg w menu:"
+pp_translate_string "Display FPS:" "Wyświetlaj klatki na sekundę:"
+pp_translate_string "Display Progress Bar:" "Pokaż pasek postępu:"
+pp_translate_string "Draw Fog:" "Rysuj mgłę:"
+pp_translate_string "Reflections:" "Odbicia:"
+pp_translate_string "Shadows:" "Cienie:"
+
+#video configuration
+pp_translate_string "Video Configuration" "Ustawienia grafiki"
+pp_translate_string "Resolution:" "Rozdzielczość:"
+pp_translate_string "Bits Per Pixel:" "Głebia koloru:"
+pp_translate_string "Fullscreen:" "Pełny ekran:"
+pp_translate_string "Experimental (needs restart)" "Eksperymantalne (wymagają restartu)"
+#pp_translate_string "Enable FSAA:" ""
+
+#audio configuration
+pp_translate_string "Audio Configuration" "Ustawienia dźwięku"
+pp_translate_string "Sound Effects:" "Efekty dźwiękowe:"
+pp_translate_string "Music:" "Muzyka:"
+pp_translate_string "(needs restart)" "(wymaga ponownego uruchomienia)"
+pp_translate_string "Disable Audio:" "Wyłącz dźwięk:"
+pp_translate_string "Stereo:" "Stereo:"
+#pp_translate_string "Bits Per Sample:" ""
+pp_translate_string "Samples Per Second:" "Próbkowanie: "
+
+#keyboard configuration
+pp_translate_string "Keyboard Configuration" "Ustawienia klawiszy: "
+pp_translate_string "Turn left:" "W lewo:"
+pp_translate_string "Turn right:" "W prawo:"
+pp_translate_string "Paddle:" "Wiosłowanie:"
+pp_translate_string "Brake:" "Hamowanie:"
+pp_translate_string "Jump:" "Skok:"
+pp_translate_string "Trick:" "Obrót:"
+#pp_translate_string "Reset:" ""
+
+#joystick configuration
+pp_translate_string "Joystick configuration" "Ustawienia joysticka"
+pp_translate_string "Enable Joystick" "Włącz joystick: "
+
+#race select
+pp_translate_string "Race!" "Wyścig!"
+pp_translate_string "Select a race" "Wybierz tor"
+pp_translate_string "Contributed by:" "Autor:"
+pp_translate_string "Unknown" "Nieznany"
+pp_translate_string "Time:" "Czas:"
+pp_translate_string "Herring:" "Śledzie:"
+pp_translate_string "Score:" "Punkty:"
+
+#event select
+pp_translate_string "Continue" "Kontynuuj"
+pp_translate_string "Select event and cup" "Wybierz dyscyplinę i puchar"
+pp_translate_string "Event:" "Dyscyplina:"
+pp_translate_string "Cup:" "Puchar:"
+pp_translate_string "You've won this cup!" "Już zdobyłeś ten puchar!"
+pp_translate_string "You must complete this cup next" "Teraz musisz zdobyć ten puchar"
+pp_translate_string "You cannot enter this cup yet" "Nie możesz jeszcze zdobywać tego pucharu"
+
+#event race select
+pp_translate_string "You don't have any lives left." "Przekroczyłeś maksymalną liczbę podejść."
+pp_translate_string "Race won! Your result:" "Wygrałeś wyścig! Wynik:"
+pp_translate_string "Needed to advance:" "Wymagane do przejścia:"
+pp_translate_string "You can't enter this race yet." "Nie możesz jeszcze startować w tym wyścigu."
+
+#loading
+pp_translate_string "Loading, Please Wait..." "Ładuję, proszę poczekaj..."
+
+#paused
+pp_translate_string "Resume" "Wznów"
+pp_translate_string "Paused" "Zatrzymany"
+
+#race over
+pp_translate_string "Race Over" "Koniec wyścigu"
+pp_translate_string "Time: %02d:%02d.%02d" "Czas: %02d:%02d:%02d"
+pp_translate_string "Herring: %3d" "Śledzie: %3d"
+pp_translate_string "Score: %6d" "Punkty: %6d"
+pp_translate_string "Max speed: %3d km/h" "Najwyższa prędkość: %3d kh/h"
+pp_translate_string "Was flying: %.01f %% of time" "W powietrzu przez %.01f %% czasu"
+pp_translate_string "Race aborted" "Wyścig przerwany"
+pp_translate_string "You beat your best score!" "Pobiłeś rekord!"
+pp_translate_string "Congratulations! You won the event!" "Gratulacje, wygrałeśkonkurencję"
+pp_translate_string "Congratulations! You won the cup!" "Gratulacje, wygrałeś puchar!"
+pp_translate_string "You advanced to the next race!" "Zakwalifikowałeś się do następnego wyścigu!"
+pp_translate_string "You didn't advance." "Nie udało się zakwalifikować do następnego wyścigu."
+
+#HUD
+#Strings are prefixed to prevent collisions with the UI
+pp_translate_string "H|FPS: %.1f" "FPS: %.1f"
+pp_translate_string "H|Time:" "Czas:"
+pp_translate_string "H|km/h" "km/h"
+#herring counter
+pp_translate_string "H|%03d" "%03d"
+#time counter
+pp_translate_string "H|%02d:%02d:%02d" "%02d:%02d:%02d"
+#speed counter
+pp_translate_string "H|%.0f" "%.0f"
