@@ -50,11 +50,12 @@ static credit_line_t credit_lines[] =
 	{ NULL, "credits_text", "Alexander Aksenov" },	
 	{ NULL, "credits_text", "Eric Alvarez Llimos" },	
 	{ NULL, "credits_text", "Helder Correia" },	
+	{ NULL, "credits_text", "Jan Karwowski" },	
 	{ NULL, "credits_text", "Karl Ove Hufthammer" },	
 	{ NULL, "credits_text", "Marco Antonio Blanco" },	
 	{ NULL, "credits_text", "Massimo Spazian" },	
 	{ NULL, "credits_text", "Mikel Olasagasti" },	
-	{ NULL, "credits_text", "Spiral" },	
+	{ NULL, "credits_text", "Pascal Garcia" },	
 	{ NULL, "credits_text", "Theo Snelleman" },	
 	{ NULL, "credits_text", "Trygve B. Wiig" },
     { NULL, "credits_text", "" },
