@@ -2,6 +2,10 @@
 2005-03-06  Volker Stroebel <volker@planetpenguin.de>
 	* data/makefile.am data/*
 	added ppracer.png and ppracer.desktop
+	
+	* data/languages/* src/credits.cpp
+	added polish translation
+	updated credits
 
 2005-03-05  Volker Stroebel <volker@planetpenguin.de>
 	* src/*
